2016-02-11 Rahul Chaudhry  <rahulchaudhry@google.com>

	* aarch64.cc (Target_aarch64::scan_erratum_843419_span): Remove
	info message for every erratum 843419 found and fixed.

2015-12-17  Peter Collingbourne  <pcc@google.com>

	PR gold/18780
	* arm.cc (Target_arm::do_make_data_plt): Choose PLT generator based
	on value of --long-plt flag.
	(Output_data_plt_arm_standard::do_get_plt_entry_size): Moved to
	Output_data_plt_arm_short.
	(Output_data_plt_arm_standard::do_fill_plt_entry): Likewise.
	(Output_data_plt_arm_standard::plt_entry): Likewise.
	(Output_data_plt_arm_standard::do_fill_first_plt_entry): Fix
	variable reference.
	(Output_data_plt_arm_short): New class.
	(Output_data_plt_arm_short::do_fill_plt_entry): Error out on too large
	PLT offsets instead of asserting.
	(Output_data_plt_arm_long): New class.
	* options.h (General_options): Define --long-plt flag.

2016-01-15 Han Shen  <shenhan@google.com>

	PR gold/19472 - need pc-relative stubs.

	* aarch64.cc (Reloc_stub::stub_type_for_reloc): Return PC-relative
	stub type for DSOs and pie executables.

2015-11-05  Cary Coutant  <ccoutant@gmail.com>

	PR gold/19163
	* aarch64.cc (Target_aarch64::Relocate::relocate): Don't apply
	certain relocations if --no-apply-dynamic-relocs is set.
	* options.h (--apply-dynamic-relocs): New aarch64-specific option.

2015-10-27  Han Shen  <shenhan@google.com>

	PR gold/19042 - unsupported reloc 311/312.

	* aarch64.cc (Target_aarch64::Scan::local): Add support for
	reloc 311/312.

2015-01-02  Alan Modra  <amodra@gmail.com>

	* version.cc (print_version): Just print current year.
	* dwp.cc (print_version): Likewise.

2015-02-21  H.J. Lu  <hongjiu.lu@intel.com>

	* configure.ac (default_size): Set to 32 for x32.
	* configure: Regenerated.

2015-02-18  Alan Modra  <amodra@gmail.com>

	PR 17954
	* powerpc.cc (Global_symbol_visitor_opd::operator()): Set default
	visibility.

2015-02-17  Rafael Ávila de Espíndola <rafael.espindola@gmail.com>
