@@ -1,3 +1,11 @@
+2016-02-26  Egor Kochetov  <egor.kochetov@intel.com>
+	    Cary Coutant  <ccoutant@gmail.com>
+
+	PR gold/19735
+	* ehframe.h (Cie::fde_encoding): New method.
+	* ehframe.cc (Eh_frame::read_fde): Discard FDEs for zero-length
+	address ranges.
+
 2016-02-11 Rahul Chaudhry  <rahulchaudhry@google.com>
 
 	* aarch64.cc (Target_aarch64::scan_erratum_843419_span): Remove
